--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_database: ^10.2.3
   firebase_core: ^2.14.0
   http: ^0.13.6
+  provider: ^6.0.5
+  fluttertoast: ^8.2.2
+  toast: ^0.3.0
 
 dev_dependencies:
   flutter_test:
